2007-12-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Move handling of SIMPLE_ELISP
	into pkg_setup function, otherwise it fails with portage-2.1.4.
	(elisp_src_unpack): Die if mv fails.

2007-12-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Redo change
	of 2007-11-24 which was undone at 2007-11-29.
	(elisp-site-regen): Kludge for backwards compatibility.

2007-11-30  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Set nullglob option,
	because there may be a directory without matching files.
	(elisp-compile, elisp-comp, elisp-make-autoload-file)
	(elisp-install, elisp-site-file-install): Use ebegin/eend.

2007-11-30  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: Added messages when operations finish

2007-11-29  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Install files in
	site-lisp again, since otherwise things break during unmerge when
	an old version of the eclass is used.

2007-11-28  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Do not use a pipeline,
	otherwise the loop is executed in a subshell and we cannot set
	variables from there. Use bash arrays and our own sort routine
	instead.

2007-11-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Emit warning message if
	files are found in the old location; this is still commented out.

2007-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install, elisp-site-regen):
	Replace basename by bash parameter expansion.
	Install packages' site-init files in site-gentoo.d subdirectory.

2007-11-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITEETC): New variable.
	(elisp-site-file-install): Handle @SITEETC@ in site-init file.

2007-11-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (EMACSFLAGS): New variable, replaces