@@ -402,3 +402,8 @@ EOF
 #		echo
 #	fi
 }
+
+
+# Local Variables:
+# fill-column: 77
+# End:
